--- a/src/components/SideBar/SideBarStyle.css
+++ b/src/components/SideBar/SideBarStyle.css
@@ -1,27 +1,25 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
-
 }
 
 :root {
   /* ===== Colors ===== */
   --body-color: #e4e9f7;
   --sidebar-color: #fff;
-  --primary-color: #7669ff;
-  --primary-color-light: #f6f5ff;
+  --primary-color: #e4e9f7;
+  --primary-color-light: #725afc;
   --toggle-color: #ddd;
   --text-color: #707070;
   --light: #d8dbe0;
   --dark: #28292c;
- 
 
   /* ====== Transition ====== */
   --tran-02: all 0.2s ease;
@@ -32,31 +30,21 @@
 
 body {
   min-height: 100vh;
+  background-color: var(--primary-color-light);
 }
 
 ::selection {
-  background-color: var(--primary-color);
+  background-color: var(--primary-color-light);
   color: #fff;
-}
-
-[data-theme="dark"] {
-  --body-color: #18191a;
-  --sidebar-color: #242526;
-  --primary-color: #3a3b3c;
-  --primary-color-light: #3a3b3c;
-  --toggle-color: #fff;
-  --text-color: #ccc;
-  --primary-color: #695cfe;
-
 }
 
 /* ===== Sidebar ===== */
 .sidebar {
-
   padding: 10px 14px;
   transition: var(--tran-05);
   z-index: 100;
   background-color: var(--sidebar-color);
+  height: 100%;
 }
 .sidebar.close {
   width: 88px;
@@ -64,38 +52,37 @@ body {
 
 /* ===== Reusable code - Here ===== */
 
-.nav-link, li {
-  height: 50px;
+.nav-link,
+li {
   list-style: none;
 }
 
-.nav-link{
-  margin: 4px;
+.nav-link {
+  margin: auto;
   border-radius: 5%;
   padding: 10px;
-
 }
-
 
 .sidebar header .image,
-.sidebar .icon {
-  min-width: 60px;
-  border-radius: 6px;
+.sidebar,
+.icon {
+  min-width: 20px;
 }
 
-.sidebar .icon {
-  min-width: 60px;
+.icon {
+  min-width: 20px;
   border-radius: 6px;
-  height: 100%;
+  /* height: 100%; */
   /* display: flex; */
   align-items: center;
   justify-content: center;
+
   font-size: 20px;
 }
 
 .sidebar .text,
 .sidebar .icon {
-  color: var(--text-color);
+  color: #000;
   transition: var(--tran-04);
 }
 
@@ -136,15 +123,14 @@ body.dark .sidebar header .toggle {
   margin-top: 40px;
 }
 
-.sidebar .search-box {
+.search-box {
   border-radius: 6px;
-  background-color: var(--primary-color-light);
+  background-color: var(--primary-color-light                                                                                                                                                                                                                                             );
   cursor: pointer;
   transition: var(--tran-05);
-
 }
 
-.sidebar .search-box input {
+.search-box input {
   height: 100%;
   width: 100%;
   border-radius: 6px;
@@ -152,31 +138,29 @@ body.dark .sidebar header .toggle {
   background-color: var(--primary-color-light);
   transition: var(--tran-05);
 }
-.nav-link .item-link {
+.nav-link {
   list-style: none;
   height: 100%;
   background-color: transparent;
   align-items: center;
   height: 100%;
   width: 100%;
+  margin-top: 0.3em;
+  margin-bottom: 0.3em;
   border-radius: 6px;
   text-decoration: none;
   transition: var(--tran-03);
   width: 100%;
 }
 
-.nav-link:hover{
-  background: var(--primary-color);
-  
+.nav-link:hover {
+  background: #dad3ff;
 }
-body.ligth .sidebar  .item-link:hover .icon,
-body.ligth .sidebar  .item-link:hover .text {
-  color: var(--toggle-color);
+.item-link:hover .icon,
+.item-link:hover .text {
+  color: var(--primary-color-light);
 }
-body.dark .sidebar  .item-link:hover .icon,
-body.dark .sidebar .item-link:hover .text {
-  color: var(--toggle-color);
-}
+
 
 .sidebar .menu-bar {
   height: calc(100% - 55px);
@@ -196,7 +180,7 @@ body.dark .sidebar .item-link:hover .text {
   transition: var(--tran-05);
 }
 
-.menu-bar .bottom-content .toggle-switch  {
+.menu-bar .bottom-content .toggle-switch {
   position: absolute;
   right: 0;
   height: 100%;
@@ -213,7 +197,6 @@ body.dark .sidebar .item-link:hover .text {
 }
 
 .lbl {
-  
   background-color: var(--primary-color);
   border-radius: 50px;
   margin-left: 20px;
@@ -245,4 +228,21 @@ body.dark .sidebar .item-link:hover .text {
   transform: translateX(20px);
   background-color: var(--light);
   box-shadow: none;
+}
+
+@layer utilities {
+  /* Personaliza el scrollbar */
+  ::-webkit-scrollbar {
+    width: 6px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: var(--primary-color);
+    border-radius: 3px;
+  }
+
+  /* Opcional: Cambia el color de fondo del scrollbar */
+  ::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+  }
 }
