--- a/src/components/SideBar/SideBarStyle.css
+++ b/src/components/SideBar/SideBarStyle.css
@@ -99,11 +99,13 @@ li {
 }
 header .image-text .name {
   margin-top: 2px;
+  transition: var(--tran-05);
   font-size: 18px;
   font-weight: 600;
 }
 
 header .image-text .profession {
+  transition: var(--tran-05);
   font-size: 16px;
   margin-top: -2px;
 }
