--- a/src/components/SideBar/SideBarStyle.css
+++ b/src/components/SideBar/SideBarStyle.css
@@ -121,6 +121,9 @@ body.dark .sidebar header .toggle {
   color: var(--text-color);
 }
 
+.sidebar .menu {
+  margin-top: 40px;
+}
 
 .search-box {
   border-radius: 6px;
@@ -162,11 +165,12 @@ body.dark .sidebar header .toggle {
 
 
 .sidebar .menu-bar {
-  height: calc(100% - 55px);
+  height: calc(100% - 30%);
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  overflow-y: scroll;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
 
 .menu-bar::-webkit-scrollbar {
